# private-assistant-commons-py

./: .copier-answers.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  benchmark_logger.py  pyproject.toml  pytest.toml
.claude/: settings.local.json
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: python_build_package.yml  python_code_quality.yml  release-please.yml  release-to-pypi.yml
docs/: api-reference.md  architecture.md  usage.md
integration/: __init__.py
migrations/: 001_add_skill_help_text_and_intents.sql  001_add_skill_help_text_and_intents_rollback.sql  002_add_is_regex_remove_hints.sql  002_add_is_regex_remove_hints_rollback.sql  README.md
src/private_assistant_commons/: __init__.py  async_typer.py  base_skill.py  messages.py  metrics.py  mqtt_connection_handler.py  mqtt_tools.py  skill_config.py  skill_context.py  skill_logger.py
src/private_assistant_commons/database/: __init__.py  device_models.py  device_registry.py  intent_pattern_models.py  models.py  postgres_config.py  skill_models.py
src/private_assistant_commons/intent/: __init__.py  models.py
tests/: test_base_skill.py  test_concurrent_scenarios.py  test_database_models.py  test_device_registry_mixin.py  test_intent_models.py  test_load_config.py  test_messages.py  test_postgres_config.py  test_skill_intents.py  test_skill_logger.py
