[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-assistant-commons"
version = "3.0.1"
description = "Common utilities and base functionalities for all skills in the Private Assistant ecosystem."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = { text = "GNU General Public License v3.0" }

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic~=2.9.2",
    "aiomqtt~=2.3.0",
    "pyyaml~=6.0.1",
]

[dependency-groups]
dev = [
    "ruff~=0.11.2",
    "mypy~=1.15.0",
    "pytest~=8.3.3",
    "pytest-cov~=6.0.0",
    "types-pyyaml~=6.0.12.20240724"
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
]
ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["private_assistant_commons"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
