[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-commons"
version = "6.2.0"
description = "Common utilities and base functionalities for all skills in the Private Assistant ecosystem."
authors = [{ name = "stkr22", email = "stkr22@github.com" }]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic~=2.12.5",
    "aiomqtt~=2.5.0",
    "pyyaml~=6.0.1",
    "rich~=14.2.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel~=0.0.25",
    "asyncpg~=0.31.0",
]

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-commons-py"
Repository = "https://github.com/stkr22/private-assistant-commons-py"
Documentation = "https://github.com/stkr22/private-assistant-commons-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-commons-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-commons-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.14",
    "mypy~=1.19.1",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-xdist~=3.8.0",
    "pytest-asyncio~=1.3.0",
    "types-pyyaml~=6.0.12.20240724",
    "aiosqlite~=0.22.0",
]
